2004-08-27  Mark Wielaard  <mark@klomp.org>

	Reported by David Gilbert <david.gilbert@object-refinery.com>
	* gnu/testlet/java/awt/image/DataBufferFloat/getDataType.java:
	Tags 1.4.
	* gnu/testlet/java/awt/image/DataBufferFloat/getElem.java:
	Likewise.

2004-08-14  Mark Wielaard  <mark@klomp.org>

	Reported by David Gilbert <david.gilbert@object-refinery.com>
	* gnu/testlet/java/awt/image/Kernel/check.java:
	Set package to gnu.testlet.java.awt.image.Kernel.
	Make sure data1 is always initialized.

2004-08-13  Bryce McKinlay  <mckinlay@redhat.com>

	* gnu/testlet/java/net/InetAddress/getByName.java: New test.
	* gnu/testlet/java/net/InetAddress/getAllByName.java: New test.
	* gnu/testlet/java/net/InetAddress/getLocalhost.java: New test.

2004-08-12  Stephen Crawley  <crawley@dstc.edu.au>	

	* configure.in : added --with-mailhost option
	* Makefile.in : ditto
	* aclocal.m4 : regenerated
	* configure : ditto
	* README : documented the new configure option
	* gnu/testlet/config.java.in : added new config attribute & getter
	for the selected mailhost
	* gnu/testlet/SimpleTestHarness.java : added new config getter
	* gnu/testlet/java/net/Socket/SocketTest.java : use selected mailhost
	* gnu/testlet/java/net/Socket/jdk12.java : ditto
	* gnu/testlet/java/net/Socket/jdk13.java : ditto
	* gnu/testlet/java/net/Socket/jdk14.java : ditto

2004-08-12  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/awt/Rectangle/add.java: New test.
	* gnu/testlet/java/awt/Rectangle/clone.java: Likewise.
	* gnu/testlet/java/awt/Rectangle/contains.java: Likewise.
	* gnu/testlet/java/awt/Rectangle/equals.java: Likewise.
	* gnu/testlet/java/awt/Rectangle/grow.java: Likewise.
	* gnu/testlet/java/awt/Rectangle/intersection.java: Likewise.
	* gnu/testlet/java/awt/Rectangle/intersects.java: Likewise.
	* gnu/testlet/java/awt/Rectangle/isEmpty.java: Likewise.
	* gnu/testlet/java/awt/Rectangle/outcode.java: Likewise.
	* gnu/testlet/java/awt/Rectangle/setBounds.java: Likewise.